register review comments addressed
