# models/user.js
@@ -1,8 +1,7 @@
 const mongoose = require('mongoose')
 const bcrypt = require('bcrypt-nodejs')
 const userSchema = new mongoose.Schema({
-  firstname:{type:String,required:true},
-  lastname :{type:String,required:true},
+  name:{type:String,required:true},
   email :{type:String,required:true},
   phone :{type:String},
   password:{type:String},
